# industrial-maintenance-agent

./: .env.example  .gitignore  README.md  app.py  pyproject.toml
data/evaluation/: blind_cases.json  cases.json
data/knowledge/: pump_troubleshooting.json
data/manifests/: ai4i.json
data/sample/: equipment.json  maintenance_history.csv  telemetry_snapshot.csv
deliverables/: 工业运维Agent项目总结.pptx
docs/: ACCEPTANCE_REPORT.md  ARCHITECTURE.md  DATA_SOURCES.md  DEVELOPMENT_PROCESS.md  EVALUATION.md  FAILURE_MATRIX.md  PRESENTATION_PLAN.md  PROJECT_BRIEF.md  PROJECT_STATUS.md  REQUIREMENTS_TRACEABILITY.md  ROADMAP.md  RUNBOOK.md
docs/product/: 00_HANDOFF_INDEX.md  01_BRD.md  02_MRD.md  03_PRD.md  04_SOLUTION_DESIGN.md  05_DATA_AND_KNOWLEDGE_PLAN.md  06_EVALUATION_AND_SAFETY.md  07_DELIVERY_PLAN.md
hermes_skill/industrial-maintenance/: SKILL.md
scripts/: download_ai4i.py  start_web.ps1
src/industrial_maintenance_agent/: __init__.py  cli.py
src/industrial_maintenance_agent/adapters/: __init__.py  hermes.py
src/industrial_maintenance_agent/agents/: __init__.py  orchestrator.py
src/industrial_maintenance_agent/data_import/: __init__.py  ai4i.py
src/industrial_maintenance_agent/domain/: __init__.py  access.py  models.py  telemetry.py  trends.py
src/industrial_maintenance_agent/evaluation/: __init__.py  benchmark.py  runner.py  shadow.py
src/industrial_maintenance_agent/governance/: __init__.py  backup.py  knowledge.py  reviews.py
src/industrial_maintenance_agent/repositories/: __init__.py  equipment.py  knowledge.py  (+3 more)
tests/: test_app.py  test_system.py
(+11 files in other folders)
