[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "industrial-maintenance-agent"
version = "1.5.0"
description = "多工具调用工业运维Agent：设备故障查询+维修方案自动生成"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
web = ["streamlit>=1.45"]
hermes = ["hermes-agent @ git+https://github.com/NousResearch/hermes-agent.git@v2026.7.7.2"]

[project.scripts]
maintenance-agent = "industrial_maintenance_agent.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
